add movie details

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     font-family: "Poppins", "sans-serif";
   }
   body{
-    background-color: #ececec;
+    background-color: white;
     overflow-x: hidden;
   }
 }
