--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-@layer base{
-  html{
+@layer base {
+  html {
     font-family: "Poppins", "sans-serif";
   }
-  body{
+  body {
     background-color: white;
     overflow-x: hidden;
+    
   }
+  /* Custom scrollbar styles */
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #cbd5e1; /* Tailwind slate-300 */
+    border-radius: 6px;
+  }
+  ::-webkit-scrollbar-thumb:hover{
+    cursor: pointer;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f8fafc; /* Tailwind slate-50 */
+    border-radius: 6px;
+  }
+  
+  /* Hide scrollbar arrows */
+  ::-webkit-scrollbar-button {
+    display: none;
+  }
+
 }
 
-.img{
+.img {
   width: 400px;
   height: 400px;
+}
+.card-description{
+  @apply absolute bottom-0 text-white p-2 truncate bg-slate-900 w-full opacity-90 
 }
